modify css link

--- a/viewproduct.html
+++ b/viewproduct.html
@@ -11,7 +11,7 @@
     <!-- bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- custom css -->
-    <link rel="stylesheet" href="./assets/css/viewproduct.css">
+    <link rel="stylesheet" href="./assets/CSS/viewproduct.css">
 
 
 </head>
