odifay in section Gold jewlary

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/image/hero/girlv.webp" class="d-block w-100" alt="girl model">
+                    <img src="./assets/image/hero/girlv.webp" class="d-block w-100 h-100" alt="girl model">
                     <div
                         class="carousel-caption d-none d-md-block d-flex flex-column justify-content-center align-items-center item1">
                         <h5 class="type1 m-0">Classic</h5>
@@ -2929,8 +2929,8 @@
                             <p>15 products available</p>
                         </div>
                         <div class="icons1 d-flex gap-2 mb-2">
-                            <div class="icon1">
-                                <button class="btn text-white" type="button" data-bs-toggle="offcanvas"
+                            <div class="icon1 justify-content-center align-items-center">
+                                <button class="btn text-white text-center" type="button" data-bs-toggle="offcanvas"
                                     data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"> Add to cart <img
                                         src="./assets/image/Best-Seller/cart-frame.svg" alt="cart"></button>
                                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight11"
@@ -2945,8 +2945,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="icon2">
-                                <button type="button" class="btn border-0  like-btn" data-bs-toggle="button"
+                            <div class="icon23 d-flex gap-2">
+                                <div class="icon2">
+                                <button type="button" class="btn  like-btn" data-bs-toggle="button"
                                     aria-pressed="false">
                                     <img src="./assets/image/Best-Seller/heart.svg" class="click">
                                 </button>
@@ -2968,6 +2969,7 @@
                                     </div>
                             </div>
                         </div>
+                            </div>
                     </div>
                     <div class="buy d-flex justify-content-center align-items-center">
                         <button class="btn text-white text-center">BUY IT NOW</button>
