--- a/index.html
+++ b/index.html
@@ -3175,6 +3175,7 @@
         <section class="instashop">
             <h2 class="title text-center">Instagram Shop</h2>
             <p class="pag text-center">Up to 50% off Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+        <div class="row">
             <div class="img-insta d-flex Shop-scroll">
                 <div class="img-inst position-relative">
                     <img src="./assets/image/instaShop/gallery-24.webp" alt="image model">
@@ -3194,14 +3195,8 @@
                         <a href="#"> <img src="./assets/image/social/instagram.svg" alt="instagram"></a>
                     </div>
                 </div>
-                <div class="img-inst position-relative">
-                    <img src="./assets/image/instaShop/gallery-27.webp" alt="image model">
-                    <div class="insta-icon">
-                        <a href="#" data-bs-toggle="tooltip" data-bs-placement="instagram"><img
-                                src="./assets/image/social/instagram.svg" alt="instagram"></a>
-                    </div>
-                </div>
             </div>
+        </div>
         </section>
     </main>
     <footer>
