--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                                     <li class="nav-item">
                                         <a class="nav-link text-white" aria-current="page" href="#">Home</a>
                                     </li>
-                                    <li>
+                                    <li class="nav-item">
                                         <a class="nav-link text-white" href="#">Shop</a>
                                     </li>
                                     <li class="nav-item dropdown">
